--- a/fyp.bib
+++ b/fyp.bib
@@ -144,6 +144,16 @@
   file = {/home/dimdakis/Zotero/storage/8VC4E2Y4/index.html}
 }
 
+@misc{CORDConsolidatedReceipt2022,
+  title = {{{CORD}}: {{A Consolidated Receipt Dataset}} for {{Post-OCR Parsing}}},
+  shorttitle = {{{CORD}}},
+  year = {2022},
+  month = mar,
+  abstract = {CORD: A Consolidated Receipt Dataset for Post-OCR Parsing},
+  copyright = {CC-BY-4.0},
+  howpublished = {Clova AI Research}
+}
+
 @misc{cristinaTransformerAttentionMechanism2021,
   title = {The {{Transformer Attention Mechanism}}},
   author = {Cristina, Stefania},
@@ -362,6 +372,12 @@
   file = {/home/dimdakis/Zotero/storage/HHG34CSF/feedforward-neural-network-its-layers-functions-and-importance.html}
 }
 
+@misc{FUNSD,
+  title = {{{FUNSD}}},
+  howpublished = {https://guillaumejaume.github.io/FUNSD/},
+  file = {/home/dimdakis/Zotero/storage/WWRRAKIR/FUNSD.html}
+}
+
 @misc{GentleIntroductionBatch,
   title = {A {{Gentle Introduction}} to {{Batch Normalization}} for {{Deep Neural Networks}}},
   howpublished = {https://machinelearningmastery.com/batch-normalization-for-training-of-deep-neural-networks/}
@@ -461,6 +477,13 @@
   abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
   howpublished = {https://huggingface.co/},
   file = {/home/dimdakis/Zotero/storage/RG3K8PCF/huggingface.co.html}
+}
+
+@misc{HuggingFaceAIa,
+  title = {Hugging {{Face}} \textendash{} {{The AI}} Community Building the Future.},
+  abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
+  howpublished = {https://huggingface.co/datasets},
+  file = {/home/dimdakis/Zotero/storage/TZ5SNMYA/datasets.html}
 }
 
 @misc{HuggingFaceTransformers,
@@ -592,6 +615,13 @@
   file = {/home/dimdakis/Zotero/storage/46ISG8W8/layoutlm-explained.html}
 }
 
+@misc{LayoutLMV2,
+  title = {{{LayoutLMV2}}},
+  abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
+  howpublished = {https://huggingface.co/docs/transformers/model\_doc/layoutlmv2},
+  file = {/home/dimdakis/Zotero/storage/F969IVJA/layoutlmv2.html}
+}
+
 @misc{LessonsLearnedRunning,
   title = {Lessons {{Learned}} from {{Running Debezium}} with {{PostgreSQL}} on {{Amazon RDS}}},
   howpublished = {https://debezium.io/blog/2020/02/25/lessons-learned-running-debezium-with-postgresql-on-rds/}
@@ -622,6 +652,13 @@
   howpublished = {https://minikube.sigs.k8s.io/docs/start/},
   langid = {english},
   file = {/home/dimdakis/Zotero/storage/G46IY2P3/start.html}
+}
+
+@misc{ModelsHuggingFace,
+  title = {Models - {{Hugging Face}}},
+  abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
+  howpublished = {https://huggingface.co/models},
+  file = {/home/dimdakis/Zotero/storage/383T6HMK/models.html}
 }
 
 @misc{munozAttentionAllYou2021,
@@ -881,6 +918,13 @@
   abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
   howpublished = {https://huggingface.co/docs/transformers/main/en/tasks/token\_classification},
   file = {/home/dimdakis/Zotero/storage/XMZ6VTA3/token_classification.html}
+}
+
+@misc{Transformers,
+  title = {Transformers},
+  abstract = {We're on a journey to advance and democratize artificial intelligence through open source and open science.},
+  howpublished = {https://huggingface.co/docs/transformers/index},
+  file = {/home/dimdakis/Zotero/storage/BCF2836N/index.html}
 }
 
 @misc{UnderstandingBackpropagationNeural,
