--- a/chap2.tex
+++ b/chap2.tex
@@ -37,7 +37,7 @@ and are explained below:
 	      When it finishes, the OCR data is sent to the Inference Server.
 	\item The Inference Server then prepares the OCR data for inference in a pre-process step, once this step is complete the model
 	      performs the inference.\\ The results from the inference are returned, and the data then goes through a final post-process step.
-	      Once the inference and post-processing are complete, and the data is in the required format the Inference Server sends the data
+	      Once the inference and post-processing are complete, and the data is in the required format, the Inference Server sends the data
 	      to the Financial Server.
 	\item The Financial Server is another Flask server written in Python. The server is a running service located in the Kubernetes cluster.
 	      The Financial Server utilizes the SQLAlchemey~\autocite{SQLAlchemyDatabaseToolkit} \emph{Object Relational Mapper (ORM)} as a
@@ -73,9 +73,8 @@ The change in architecture is due to the following reasons:
 \end{itemize}
 As one can now visualise the data flow throughout the system components, the next step is a deeper dive into the technologies considered
 for use in the system along with explanation of the chosen technologies and their implementation.
-\section{Technologies Considered}
+\section{Technologies Considered for the Inference Server - AI / ML Pipeline Structure}
 \label{sec:technologies}
-\subsection{Inference Server - AI / ML Pipeline Structure}
 The Inference Server consists of the Artificial Intelligence  (AI) / Machine Learning (ML) pipeline, which is deployed behind a Flask server.
 Whilst the implementation of a Flask server is trivial, the AI / ML pipeline was the most challenging component of the entire system. But also
 the most interesting.\\
@@ -84,7 +83,7 @@ To extract desired key information from an invoice, the document must first go
 through a series of steps where each step's input is dependent on the previous step's output. This is why the term used is in industry is
 `pipeline'. The approach to tackling this problem must first be outlined:
 
-\subsubsection{Three-Step Process}
+\subsection{Three-Step Process}
 To solve the KIE from an invoice problem, this is the three-stage process that will be used:
 \begin{enumerate}
 	\item \textbf{Text Localisation}: For this step a model is used to identify the location of text in the invoice. The text is
@@ -116,7 +115,7 @@ To solve the KIE from an invoice problem, this is the three-stage process that w
 	      The variance in data makes it very difficult to obtain a model that is generalized (can work on all / different forms of data).\\
 	      A number of different approaches / model architectures can be used to try and accomplish this step.\\
 \end{enumerate}
-\subsubsection{Visually-rich Document Understanding Competition - SROIE}
+\subsection{Visually-rich Document Understanding Competition - SROIE}
 From the three stage process as outlined above, the Text Localisation and the OCR steps have both open-source and very good proprietary models.
 Not to say that they are trivial, as they most certainly are not, but the main area of interest is the KIE step.\\
 In general, the area of visually rich document / semi-structured document understanding is not considered a solved problem in the discipline of
@@ -132,8 +131,7 @@ The organisers for this competition created one of the first publically availabl
 The following is an example of the SROIE dataset:
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.8\textwidth]{figures/sroie_example.png}
-
+	\includegraphics[width=1\textwidth]{figures/sroie_example.png}
 	\caption{SROIE Dataset Example}
 	\label{fig:sroie_dataset_example}
 \end{figure}
@@ -164,7 +162,7 @@ ended up with over 20 fields in order to extract the desired information.
 \bigbreak
 Whilst format of receipts differs, the variance is not that great. Most receipts have a similar structure. The same can not be said about
 invoices. For invoices, the structure is much more varied as to are the borders / boxes / white space which separate the values.
-\subsubsection{SROIE Models}
+\subsection{SROIE Models}
 Whilst these differences posed challenges to completing this project, it was none-the-less decided to start trying to implement some of the open-source models
 from the competition. The initial attempts proved to be extremely time-consuming and joyless. The text localisation models were attempted first. From
 5 models attempted, only one was successful in deployment.
@@ -241,7 +239,7 @@ input string. This was the initial use case for the Transformers architecture, a
 languages\footnote{The Greek translation is pronounced `Yasu Cosme'}.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.7\linewidth]{figures/basic_transformer.png}
+	\includegraphics[width=0.8\linewidth]{figures/basic_transformer.png}
 	\label{fig:basic_transformer}
 	\caption{Basic Transformer Sequence To Sequence example}
 \end{figure}
@@ -250,23 +248,23 @@ Peeking under the hood, we can see that the encoder and decoder are responsible 
 six encoders and similarly a matching set stack of six decoders, although these numbers can be altered.
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.65\linewidth]{figures/transformer_stacked_encoder_decoder.png}
+	\includegraphics[width=0.9\linewidth]{figures/transformer_stacked_encoder_decoder.png}
 	\label{fig:transformer_stacked_encoder_decoder}
-	\caption{Transformer Stacked Encoder and Decoder example~\autocite{alammarIllustratedTransformer}}
+	\caption{Transformer Stacked Encoder and Decoder example, sourced from here~\autocite{alammarIllustratedTransformer}}
 \end{figure}
 The encoder itself are identical in structure, but they have their own weights associated to them. At first these are set at random, but they are
-altered through the back-propagation of the training phase by the use of a softmax function. % elaborate more here
+altered through the back-propagation of the training phase (details to follow).
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.6\linewidth]{figures/encoder_architecture.png}
-	\caption{Transformer Encoder architecture example~\autocite{alammarIllustratedTransformer}}
+	\includegraphics[width=0.8\linewidth]{figures/encoder_architecture.png}
+	\caption{Transformer Encoder architecture example, sourced from here~\autocite{alammarIllustratedTransformer}}
 	\label{fig:transformer_encoder}
 \end{figure}
 The Self-Attention layer will be described in more detail shortly but for now lets look at the decoder architecture:
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=0.9\linewidth]{figures/decoder_archi_1.png}
-	\caption{Transformer Decoder architecture example~\autocite{alammarIllustratedTransformer}}
+	\includegraphics[width=1\linewidth]{figures/decoder_archi_1.png}
+	\caption{Transformer Decoder architecture example, sourced from here~\autocite{alammarIllustratedTransformer}}
 	\label{fig:transformer_decoder}
 \end{figure}
 As is observed the decoder is almost identical to the encoder save for an added \code{Encoder-Decoder} layer. This layer
@@ -302,7 +300,7 @@ the original Transformers model.
 		      \includegraphics[width=1\linewidth]{figures/feed_forward.png}
 		      \label{fig:feed_forward}
 		      \caption{Classic Feed Forward Neural network layer architecture~\autocite{guptaDeepLearningFeedforward2018}, The left side depicts
-			      a single perceptron whilst the right depicts a multilayer network.}
+			      a single perceptron whilst the right depicts a Multi-Layer Perceptron network.}
 	      \end{figure}
 	      They are also known as a \emph{Multi-Layer Perceptron (MLP)}. One of the first and most popular deep learning models~\autocite{FeedforwardNeuralNetwork2022}.
 	\item \textbf{Softmax}: The Softmax function is used to compress the outputs to form a number in the range 0 - 1 \code{Output Probabilities}.
@@ -324,6 +322,26 @@ For example:
 The word \emph{bark} has two different meanings depending on the context. Humans are quite good at being able to tell which meaning
 should be derived from the context, but trying to teach this to a machine is a much more complex task.
 \bigbreak
+This idea of context in a sentence as above can be thought of as the different geographical location of text blocks on a document,
+in particular an invoice. To be able to extract the relevant meaning, the context is vital. As aforementioned, invoices
+have no set standard and can vary significantly. During the creation of the dataset for this project an invoice was discovered
+with two varying styles of expression for two vary similar products. It is one of three to four test emails used during system
+development. A brief look through other documents corroborated that this type of finding is quite common across a multitude of
+different suppliers invoices. This is an unfortunate trend.
+\bigbreak
+Both highlighted rows are identical in every field, except for the description.\\
+The beers are even made by the same company, yet the description of the quantity was, presumably, left to be filled in by two different humans with
+no structure or naming standards. With such inconsistencies in the data, the task of learning becomes more difficult and the concept of context
+becomes extremely important.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{figures/invo_complexity.png}
+	\caption[Invoice depicting inconsistencies]{This is a real invoice depicting inconsistencies in the description, highlighted in green.}
+	\label{fig:context}
+\end{figure}
+For optimal performance, a model would need to have a way of associating different parts of an invoice with similar parts of other invoices,
+throughout different layouts to establish a pattern. The model would need to pay particular attention to the context of the data.
+\bigbreak
 To overcome the complexities of the human language, some pre-processing must first be performed on the text data to convert it to
 numbers which the model can use to manipulate and ultimately learn from. The way that transformers based models remember the
 distances between words, in sentences or what their \emph{closeness} / association is to other words by using the attention mechanism.
@@ -333,7 +351,7 @@ briefly touched on the \code{embedding} procedure for the original transformer m
 as we compare it to LayoutLMv2. Possessing the knowledge of what data is in the input embeddings (and output embeddings) will allow us to
 understand what the attention mechanism is doing.
 \bigbreak
-The input string is not a sequence of words, but a sequence of \emph{tokens}.
+The main text model input string is not a sequence of words, but a sequence of \emph{tokens}.
 \subsection{Tokenisation}
 \label{sec:tokenisation}
 To improve performance a body of text is first tokenized, or split into smaller chunks.\\
@@ -353,8 +371,9 @@ Tokenization usually comes in three different forms; there are word, subword and
 	\item \textbf{Subword Tokenization}: A subword tokenization is a method of tokenizing a text document by splitting the text into subwords.
 	      For example, the word \emph{smartest} is split into \emph{smart} and \emph{est}, whilst the word \emph{largest} is split into \emph{large} and \emph{st}.
 	      The subword tokenization method is very performative, as it is able to learn the meaning of the words. If the model encounters an OOV word, it
-	      will break it down and may learn meaning from the subwords and the subwords \emph{distance} from other words.\\ It is important to note that
-	      this method will not split every word into subwords. Frequently occurring words are kept as is, whilst less frequently occurring words
+	      will break it down and may learn meaning from the subwords and the subwords proximity to and from other words. \\
+	      It is important to note that
+	      this method will not split every word into subwords. Frequently occurring words are kept as is, whilst words that occurr less frequently
 	      are split. This is highly dependent on the corpus, but as an example, the word \emph{annoy} will not be split, if the word \emph{annoying}
 	      occurs frequently in the corpus then \emph{annoying} will also be kept. If however, it is rare in the corpus then it will be split
 	      into \emph{annoy} and \emph{ing}. If they model encounters an OOV word such as \emph{annoyingly}. It can make sense of the word by splitting it
@@ -389,9 +408,10 @@ Tokenization usually comes in three different forms; there are word, subword and
 Most of the Transformers architecture based models use some BPE or some variation of it.
 \subsection{Multi Modal Token Embeddings}
 These tokens are given numerical IDs which are kept in a look-up table.\\
-The tokens are not the only data fed into the model. The \emph{multi-moldality} refers to a combination of other data types. With the original
-transformers architecture the 1-D position or position in a sequence is combined with the  In the case of
-LayoutLMv2, the multi-modality is the combination of the token and the position. This is known as the \emph{Layout Embedding} and refers to the geometrical position of the token in the document.
+The tokens are not the only data fed into the model. The \emph{multi-modality} refers to a combination of other data types. With the original
+transformers architecture the 1-D position or position in a sequence is combined with the original input token. In the case of
+LayoutLMv2, the multi-modality is the combination of the token and the position the initial training phase.
+This is known as the \emph{Layout Embedding} and refers to the geometrical position of the token in the document.
 As this is a requirement and a large part of the reason that this model is so performative, a list of bounding boxes must be provided to the model
 upon calling it for training or inference. \\
 The tokenizer process determines the bounding box (from the initial OCR'd input bounding boxes for words) per token in the tokenization stage.
@@ -409,7 +429,9 @@ Detectron2 and the segment embeddings are the final embedded input matrices. As 
 embeddings.\\
 It is important to note that embedding only occurs once, in the initial input stage of the model.
 \subsection{LayoutLMv2 Architecture}
-Know having a greater understanding of the input for the LayoutLMv2 model we observe the architecture.
+Know having a greater understanding of the input for the LayoutLMv2 model we observe the architecture\footnote{The difference between the original LayoutLM and LayoutLMv2
+	is that the visual and positional embedding occurs only during the fine-tuning phase for the original LayoutLM, whereas, LayoutLMv2 includes this
+	data during the initial training phase too.}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{figures/layoutlmv2_archi.png}
@@ -417,8 +439,9 @@ Know having a greater understanding of the input for the LayoutLMv2 model we obs
 	\label{fig:layoutlmv2_archi}
 \end{figure}
 
-\#\# Should I swap the architecture image and the multi modal token embeddings section? it essentially explains the 
-layers, I kind of wanted to let the reader build an image in their head by reading it and then seeing the architecture. 
+\#\# Should I swap the architecture image and the multi modal token embeddings section? it essentially explains the
+layers, I kind of wanted to let the reader build an image in their head by reading it and then seeing the architecture.
+That way it feels like the reader has been able to visualize / `come up with' the  architecture on their own.
 I may not have done a good enough job in my descriptions though or maybe its just easer to map a diagram to a bullet list?
 oh yea I should restructure that as a bullet list
 \#\#
@@ -457,11 +480,12 @@ From the input sequence every single word (actually embedding, but it is easier 
 in the sequence is represented as a vector. In practice, this would be just like a single self-attention layer. As a Multi-head attention layer is used in this
 model architecture this would be analogous to concatenating other word vectors to create a matrix. This is the difference between a regular self attention layer
 and a multi-head attention layer, the increase in dimensionality. This increase in dimensionality brings with it many performance improvements, the model
-can train and infer quicker. Along with more accurate results, higher dimensionalities allow for more details to relationships to be recorded.\\
+can train and infer quicker. Along with more accurate results, higher dimensionalities allow for more details and relationships to be recorded.\\
 For the sake of clarity this report will initially reduce the dimensionality and describe a single word vector.\\
 This gives a matrix of size (Sequence Length, Embedding Size, \sout{Sample Size}) - as we have reduced dimensionality.
 \bigbreak
-The first step is to create a Query, Key and a Value matrix for each word in the input sequence. They are updated via the three separate linear layers as per \Cref{fig:kvq_ll}. Each linear layer has its own weights~\autocite{alammarIllustratedTransformer}.
+The first step is to create a Query, Key and a Value matrix for each word in the input sequence. They are updated via the three separate linear layers
+as per \Cref{fig:kvq_ll}. Each linear layer has its own weights~\autocite{alammarIllustratedTransformer}.
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=1\textwidth]{figures/k_v_q_linear_layers.png}
@@ -477,38 +501,230 @@ The important part to note here is that each input word has gone through a serie
 Layers.\\
 Each of these translations is tunable, and it is how the model learns. When a predicted output is wrong, the weights are altered to reflect the
 wrong decision. Similarly, for correct output in the training phase, the weights are altered to reflect the correct decision.
-\subsubsection{Attention Score}
-
-
-
-% stick that in a footnote
-\section{Hugging Face LayoutLMv2}
-Hugging Face~\autocite{HuggingFaceAI} is a French company which initially developed a chat app that has since pivoted into becoming one of the most
-popular deep learning model platforms~\autocite{syalHuggingFaceStep2020}. They specialise in Natural Language Processing (NLP) and they have a large
-number of models available for public use.\\ The company provide the \code{Transformers} library which contains over thirty pre-trained models available
-in over 100 languages~\autocite{HuggingFaceTransformers}. The models are all of based on the transformers architecture as proposed in the excellent paper
-% rephrase as this is used elsewhere now
-\emph{Attention Is All You Need}~\autocite{vaswaniAttentionAllYou} developed by Vaswani et al. at Google in 2017. The state-of-the-art models for NLP
-were Recurrent Neural Networks (RNNs) and Convolutional Neural Networks (CNNs) which implemented an encoder and a decoder
-~\autocite{brownleeEncoderDecoderRecurrentNeural2017}. \#\#\ I want to stick in a proper description and explanation of the encoder and decoder
-architecture along with the transformer architecture here. is this too technical? I feel like it may be? \#\#
-The paper, along with subsequent varied implementations of it, are responsible for a shift away from these models toward the transformer architecture.
+\subsection{Attention Score}
+First this report will tackle the attention in the encoder. The attention used in the decoder is very similar to the attention in the encoder. \\
+This is the formula used to calculate the attention score.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/attention_score_formula.png}
+	\caption{Attention Score Formula}
+	\label{fig:attention_score}
+\end{figure}
+Where:
+\begin{itemize}
+	\item \textbf{Q} is the query matrix.
+	\item \textbf{K} is the key matrix.
+	\item \textbf{V} is the value matrix.
+	\item \textbf{QK\textsuperscript{T}} is the dot product of the query matrix and the transpose of the key matrix.
+	\item \textbf{d\textsubscript{k}} is the dimensionality of the key matrix.
+\end{itemize}
+A nice way to visualise this can be seen in the figure~\cref{fig:attention_score_matrix_form}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/attention_formula_matrix_form.png}
+	\caption{Attention Score Formula visualized in the context of matrices. From this source~\autocite{alammarIllustratedTransformer}}
+	\label{fig:attention_score_matrix_form}
+\end{figure}
+The attention layer itself can be visualized in the figure~\cref{fig:attention_layer}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.6\textwidth]{figures/attention_layer.png}
+	\caption{Attention Layer in detail from here~\autocite{doshiTransformersExplainedVisually2021b}.}
+	\label{fig:attention_layer}
+\end{figure}
+As the multi-headed attention is logically partitioned, separate weight matrices are used for each head. As can be visualised in the
+\cref{fig:attention_layer_heads}. In this example, the words `Thinking Machines' form the input matrix (a vector for each word)\footnote{
+	In the use case for invoices, the input matrix X consists of the final embeddings, as derived earlier.}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/attention_multi_head.png}
+	\caption{Attention Layer with heads from here~\autocite{alammarIllustratedTransformer}}
+	\label{fig:attention_layer_heads}
+\end{figure}
+After the self attention scores have been calculated (\Cref{fig:attention_score_matrix_form}) for each attention head as there are now
+eight separate matrices (one for each attention head\footnote{Eight is the default value, although this can be configured.}). The correct shape
+must be obtained to satisfy the desired input shape of the feed forward layer. This layer is expecting a single matrix, so the attention heads
+the matrices are simply concatenated and multiplied with a further weight matrix obtained\footnote{This weight matrix is adjusted during training.} as per
+\Cref{fig:concat_atn_head_matrices}. The idea here is to keep the values of the words that are relevant and drown out the irrelevant words by multiplying
+them by tiny numbers, i.e. 0.01. This returns the desired effect.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/concat_atn_head_matrices.png}
+	\caption{Concatenated Attention Head Matrices as sourced from here~\autocite{alammarIllustratedTransformer}}
+	\label{fig:concat_atn_head_matrices}
+\end{figure}
+\Cref{fig:atn_summary} depicts a way to visualze the entire process. As previously detailed, and can be seen, the embeddings are only
+used in the inital pass into the encoder, all subsequent traversals use \code{R}, which is the output of the encoder directly preceding the
+current encoder.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\textwidth]{figures/atn_summary.png}
+	\caption{Attention Summary from here~\autocite{alammarIllustratedTransformer}}
+	\label{fig:atn_summary}
+\end{figure}
+The attention score calculation is carried out in step \textbf{4} as depicted in \Cref{fig:atn_summary}. \\
+\subsection{Attention Intuition}
+The formula along with its place in the encoder and the inputs have now been detailed, yet it is important to develop an intuition of
+why the formula works and how this formula returns useful scores.\\
+To do this here is an example starting with the dot product calculation of the Query (Q) and Key (K)\textsuperscript{Transpose} matrices
+as per the formula and depicted in \Cref{fig:q_kt_dot_product}. Lets call this the `factor matrix'.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.7\textwidth]{figures/dot_prodct_q_kt.png}
+	\caption{Dot Product of Query and Key Transpose sourced from here~\autocite{doshiTransformersExplainedVisually2021b}}
+	\label{fig:q_kt_dot_product}
+\end{figure}
+Other calculations the division and square root of the formula are not shown here, as they do not alter the matrix but merely configure its
+shape and manipulate it so that the score can be calculated more easily.
 \bigbreak
-\subsubsection{Transfer Learning}
+Now that the dot product of (QK\textsuperscript{T}), the next part of the formula is to obtain the
+dot product of the result of (QK\textsuperscript{T})\footnote{Query Key\textsuperscript{T}} with the V or Values matrix as per \Cref{fig:qk_v_dot_product}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\textwidth]{figures/qk_v_dot_product.png}
+	\caption{Dot Product of Query Key Transpose and Values sourced from here~\autocite{doshiTransformersExplainedVisually2021b}, depicting the
+		resulting attention score.}
+	\label{fig:qk_v_dot_product}
+\end{figure}
+Z is the resulting attention score vector. A way to understand the sequence of events is to think about the ouput score.
+For each word, the attention score is the encoded value of every word from the `Value' matrix, weighted by the `factor'
+matrix. The factor matrix itself is the dot product of the Query value for the specified word with the Key value of all
+words as\autocite{doshiTransformersExplainedVisually2021b} per \Cref{fig:atn_weight_summation}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/atn_weight_summation.png}
+	\caption{Attention Weight Summation from here~\autocite{doshiTransformersExplainedVisually2021b}, depicting the resulting attention score.}
+	\label{fig:atn_weight_summation}
+\end{figure}
+Here the Query word is the word for which the attention is being calculated, the Key and Value word is the word to which we
+are paying attention to determine how relevant that word is to the Query word\autocite~{doshiTransformersExplainedVisually2021b}.
+\bigbreak
+Remember that the Query, Key and Value rows are actually vector projections of the words with their added embeddings i.e. positional attributes etc.,
+then as the dot product between a particular word and every other word captures some interactions between the word and all others, this
+ability is utilized to signify the relationship or proximity of any word with any word. \\
+A little visual aid may be beneficial, \Cref{fig:dot_prod_similarity}:
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/dot_prod_similarity.png}
+	\caption{Dot Product of Query, Key and Value from here~\autocite{doshiTransformersExplainedVisually2021b}, depicting the resulting attention score.}
+	\label{fig:dot_prod_similarity}
+\end{figure}
+This is excellently explained here~\autocite{doshiTransformersExplainedVisually2021b}:
+\begin{itemize}
+	\item If any two paired numbers, like `a' and `d'', are both positive or both negative then the product wil be positive. The product will
+	      increase the summation.
+	\item If one number is positive but the other negative then teh product will be negative. The product will decrease the summation.
+	\item If the product is positive, the larger both numbers are, the more they contribute to the summation.
+\end{itemize}
+If the signs of the corresponding numbers in the two vectors are aligned, the final sum will be larger. This means a higher level of similarity,
+or proximity between the two words.\\
+For word vectors that are aligned the attention score is high, and vice versa for word vectors which are not aligned.
+The ability to tune the parameter of the translations during training gives the model the ability to strengthen or weaken the alignment of the
+words.
+\bigbreak
+As can be seen in \Cref{fig:attention_usage}, attention is used in three areas. The main concept and how attention works in the encoder has
+been detailed. The other two areas are as follows.
+\subsection{Self Attention in the Decoder}
+The self attention mechanism in the decoder works in a similar fashion to the encoder, but the inputs are different as per \Cref{fig:atn_decoder}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.8\textwidth]{figures/atn_decoder.png}
+	\caption{Self Attention Mechanism for Decoder from here~\autocite{doshiTransformersExplainedVisually2021b}, depicting the resulting attention score.}
+	\label{fig:atn_decoder}
+\end{figure}
+In the decoder the relevance of each word in the target sentence is computed with respect to every other word in the target sentence
+as per \Cref{fig:decoder_self_atn}.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.6\textwidth]{figures/decoder_self_atn.png}
+	\caption{Attention Mechanism for Encoder-Decoder in the decoder from here~\autocite{doshiTransformersExplainedVisually2021b}.}
+	\label{fig:decoder_self_atn}
+\end{figure}
+\subsection{Attention in the Encoder-Decoder}
+Again, very similar to the encoder attention but the Query is obtained from the target sentence and the Key and Value are obtained from the
+source sentence. The goal is to compute the relevance of each word in the target sentence to each word in the source sentence.
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=0.9\textwidth]{figures/encoder_decoder_atn.png}
+	\caption{Attention Mechanism for Encoder-Decoder from here~\autocite{doshiTransformersExplainedVisually2021b}. Same input
+		and target as \Cref{fig:atn_decoder}.}
+	\label{fig:atn_encoder_decoder}
+\end{figure}
+\subsection{Transfer Learning}
+The architecture of the transformer allows for the model to be trained twice. \\
 Transfer learning is a technique which allows a model to be trained on a dataset or numerous datasets to be used as its base corpus. The initial
-training of these models take a huge amount of data and compute power.
+training of these models requires huge amount of data and compute power along with expertise in the domain.
+This is the base trained model.
 \bigbreak
 As an example, The \emph{BigScience Large Language Model}~\autocite{BigScienceResearchWorkshop}
 is a model that is currently in training. The training of BigScience's main model started on March 11, 2022 11:42am PST and will continue
-for 3-4 months on 384 A100 80GB GPUs of the Jean Zay public supercomputer~\autocite{BigscienceTr11176BmllogsHugging}. The data set
-contains 341.6 billion tokens. which is approx. 1.5 TB of data.\\ That is an astonishing amount of compute, data and engineering expertise.
+for 3-4 months on 384 A100 80GB GPUs of the \emph{Jean Zay} public supercomputer~\autocite{BigscienceTr11176BmllogsHugging}. The data set
+contains 341.6 billion tokens. which is approx. 1.5 TB of data.\\ That is an astonishing amount of compute, data and engineering expertise.\\
+This example is one of the more extreme but shows the scale of what the initial base training can be.
+\bigbreak
+In the case of LayoutLMv2, the base model has been trained on six different datasets, from the
+visually-rich document understanding area including the aforementioned, SROIE dataset and others including the FUNSD dataset~\autocite{FUNSD}
+and the CORD dataset~\autocite{CORDConsolidatedReceipt2022}.
+\bigbreak
+These models are then \emph{fine-tuned} on custom datasets for the specific task at hand. For example, LayoutLMv2 in this instance is
+fine-tuned on the custom invoice dataset which is optimized for invoices but the same base model would also be used for receipts and other
+documents which see a drastic shift in document layout. A model optimized for invoices may still work for some receipts, but to obtain
+state-of-the-art results, the model should be fine-tuned on the dataset for which it will be used to infer.\\
+A downstream task\footnote{A downstream task can be thought of as a models capabilities or different implementations, for example,
+	LayoutLMv2 can be used for token classification (like this project) but it can also be used for \emph{Sequence Classification}
+	and \emph{Question Answering} tasks~la\autocite{LayoutLMV2}.} to first classify what structure the document is and then use a trained model that is optimized for
+that document structure could be implemented to further increase the accuracy of the system.
+\bigbreak
+This idea of transfer learning cuts out the large training time and allows most anyone to use and fine-tune a model to their specific needs.
+Some libraries now exist which contain not only the pretrained models, but datasets of varying sizes and forms, along with other components
+to aid in the pre-processing of the data to be used in the fine-tune training with model phase.\\
+The \emph{transformers library} by Hugging Face~\autocite{HuggingFaceAI} is one such library.
 
-The transformers library is a very powerful library and it looks to cut away at the \emph{boiler plate} code required to implement a model.
-
+\section{Hugging Face}
+% stick that in a footnote
+Hugging Face~\autocite{HuggingFaceAI} is a French company which initially developed a chat app that has since pivoted into becoming one of the most
+popular deep learning model platforms~\autocite{syalHuggingFaceStep2020}. Here is what they say about themselves:
+\begin{quoting} 
+	Hugging Face Transformers provides APIs to easily download and train state-of-the-art pretrained models. Using pretrained models can reduce your compute
+	costs, carbon footprint, and save you time from training a model from scratch. The models can be used across different modalities such as:
+	text, audio, images, video, and multimodal.
+	\begin{flushright}
+	~---~Hugging Face Team
+	\end{flushright}
+\end{quoting}
+They specialise in Natural Language Processing (NLP) and they have a large number of models available for public use.\\ 
+The company provide the \code{Transformers} library which contains over thirty pre-trained models base models available
+in over 100 languages~\autocite{HuggingFaceTransformers}. The models are mostly of based on the transformers architecture.\\
+Hugging Face also provide \emph{The Model Hub}~\autocite{ModelsHuggingFace}, this works akin to a code repository for models, once a model is uploaded to the hub, it can be 
+made public or private. Hugging Face also provide a large variety of open-source datasets~\autocite{HuggingFaceAIa} which can be used to train models.\\
+The team have a massive amount of tutorials and guides on model architecture available along with a large number of articles, blogs and open-sourced code for 
+model evaluation, training and inference.
+\bigbreak
+They make money via their Inference API where there are a plethora of models ready behind endpoints for a variety of different use cases. 
+They also charge for support and for deployment and training of models on their servers.
+\bigbreak
+Transformers library is a very powerful library, it looks to cut away at the \emph{boiler-plate} code required to implement a model.\\
+The library supports the PyTorch, TensorFlow and JAX frameworks. It even supports cross framework deployment so a model may be trained using 
+PyTorch and deployed using TensorFlow or JAX for inference. All cross framework integrations appear to be supported~\autocite{Transformers}.\\
+The library also contains some great functions for data pre-processing:
+\begin{itemize}
+	\item \textbf{Tokenizer}: The pre-processing step to convert text into a sequence of tokens.
+	\item \textbf{FeatureExtractor}: This function resizes images for use in models and can even be used with the OCR engine enabled (PyTesseract).
+	\item \textbf{Processor}: This is a model specific function which wraps the tokenizer and the feature extractor in to a single function for 
+	ease of use.
+\end{itemize}
+The tokenizer is utilized in this project. \\
+The transformers library along with the available resources on the Hugging Face website were used extensively during the research and development
+phases of the project.
 \subsection{}
 use.
 
 
+Before the Vaswani's et al. paper, \emph{Attention Is All You Need}, the state-of-the-art models for NLP were Recurrent Neural Networks
+(RNNs) and Convolutional Neural Networks (CNNs) which implemented an encoder and a decoder
+~\autocite{brownleeEncoderDecoderRecurrentNeural2017}. \\
+The paper, along with subsequent varied implementations of it coupled with the utility of provisioning a model of such complexity, 
+are responsible for a shift away from these models toward the transformer architecture.
 
 \subsection{The Challenges}
 \label{sec:challenges}
